# linkml-openapi

./: CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-03-spring-query-params-and-deep-chains.md
docs/superpowers/specs/: 2026-05-03-spring-query-params-and-deep-chains-design.md
examples/: generate.sh
examples/bookstore/: openapi.yaml  schema.yaml
examples/dcat3-demo/: README.md  pom.xml
examples/dcat3-demo/src/main/java/io/example/dcat/: Application.java  StubControllers.java
examples/dcat3-demo/src/main/java/io/example/dcat/store/: InMemoryStore.java  Stores.java
examples/dcat3-demo/src/main/resources/: application.properties
examples/dcat3-demo/src/main/resources/static/: redoc.html
examples/minimal/: openapi.yaml  schema.yaml
examples/petstore/: openapi.yaml  schema.yaml
examples/spring-rdf-runtime/: pom.xml
examples/spring-rdf-runtime/src/main/java/io/linkmlspring/rdf/: LinkmlSpringRdfAutoConfiguration.java  RdfHttpMessageConverter.java  RdfMapper.java  SpecRegistry.java
examples/spring-rdf-runtime/src/test/java/io/linkmlspring/rdf/: RdfMapperTest.java  SpecRegistryTest.java
examples/spring-rdf-runtime/src/test/resources/: test-spec.yaml
src/linkml_openapi/: __init__.py  _base.py  _chains.py  _query_params.py  cli.py  generator.py
src/linkml_openapi/post_processors/: __init__.py  extract_inline_oneof.py
src/linkml_openapi/spring/: __init__.py  cli.py  generator.py
src/linkml_openapi/spring/templates/: api.java.jinja  dto.java.jinja
tests/: test_chains_helper.py  test_dcat3.py  test_e2e_validation.py  test_examples.py  test_generator.py  test_linkml_spring.py  test_post_processors.py  test_query_params_helper.py
tests/fixtures/: dcat3-acme.yaml  dcat3.yaml  person.yaml  spring_nested_only.yaml  spring_path_template.yaml  spring_query_params.yaml
